changed .env.example template; removed deprecated features; added WebAppController for handling requests from report site; implemented Dockerfile for containerization